# email-triage-openenv

./: Dockerfile  HF_README.md  README.md  baseline_results.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
app/: env.py  graders.py  main.py  models.py  reward.py  tasks.py
scripts/: baseline.py
server/: app.py
tests/: test_env.py
